Fixed User Left not showing error

--- a/frontend/src/Component/Message/Message.css
+++ b/frontend/src/Component/Message/Message.css
@@ -62,7 +62,7 @@
     border-radius: 15px;
     background: #dadada;
     color: rgb(0, 0, 0);
-    text-align: center;
+    text-align: left;
     font-weight: 500;
     padding: 10px;
     font-family: arial;
